# react-native-ijsi

./: CONTRIBUTING.md  LICENSE  README.md  package.json  react-native-ijsi.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
android/src/main/: AndroidManifest.xml
android/src/main/java/com/reactnativeijsi/: IjsiModule.java  IjsiPackage.java
cpp/: react-native-ijsi.cpp  react-native-ijsi.h
example/: App.js  package.json
example/android/: build.gradle
example/ios/example.xcodeproj/: project.pbxproj
ios/: Ijsi.h  Ijsi.mm
ios/Ijsi.xcodeproj/: project.pbxproj
src/: index.tsx
